tests/regression/errors/basic/type_error_4.csd
// Type error test 4
sus number drip = 4
sus text tea = "string_4"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 4:", wrong)
